--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 #div-circle {
     border-style: ridge
 }
+
+/* Margin and padding around player's names */
+.inline {
+    display: inline;
+    padding: 10px;
+    margin: 10px    
+}
