--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-#div-circle {
-    border-style: ridge
+#square {
+    height: 100px;
+    width: 100px;
+    margin: 10px;
+    border-style: ridge;
+    padding: 20px;
+}
+
+#circle {
+    height: 100%;
+    width: 100%;
+    border-style: ridge;
 }
 
 /* Margin and padding around player's names */
