--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 #square {
     height: 100px;
     width: 100px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border-style: ridge;
     padding: 20px;
 }
@@ -10,6 +11,7 @@
     height: 100%;
     width: 100%;
     border-style: ridge;
+    border-radius: 100%;
 }
 
 /* Margin and padding around player's names */
