--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     border-style: solid;
     border-width: 1px;
     padding: 20px;
+    background-color: lightgray;
 }
 
 #circle {
@@ -14,6 +15,7 @@
     border-style: solid;
     border-width: 1px;
     border-radius: 100%;
+    background-color: #bf3eff
 }
 
 /* Margin and padding around player's names */
