--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@
 .div-disabled {
     color: grey
 }
+
+.div-circle {
+    height: 50px;
+    width: 50px;
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 50%;
+}
