pre-renderCircle function completed

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     border-style: solid;
     padding: 5px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .inputField {
