--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@
     border-style: solid;
     padding: 5px;
     display: flex;
-    flex-direction: column;
+    width: 400px;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .inputField {
@@ -41,6 +43,9 @@
     border-color: black;
     border-style: solid;
     border-radius: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .header {
